Modify launch settings

--- a/TaskManagement/TaskManagement/Properties/launchSettings.json
+++ b/TaskManagement/TaskManagement/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "api/values",
+      "launchUrl": "api/",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -20,8 +20,8 @@
     "TaskManagement": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "api/values",
-      "applicationUrl": "http://localhost:5000",
+      "launchUrl": "api/",
+      "applicationUrl": "http://localhost:52126",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
