Added dockerfiles and docker compose

--- a/TaskManagement/TaskManagement/appsettings.json
+++ b/TaskManagement/TaskManagement/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=PRINCZ\\SQLEXPRESS;Initial Catalog=TaskManagement;Integrated Security=True"
+    "DefaultConnection": "Server=sqlServer;Database=TaskManagementDb;User Id=sa;Password=BigPassw0rd"
   }, 
   "Logging": {
     "LogLevel": {
